[package]
name = "llm-api-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
colog = "1.4.0"
eventsource-stream = "0.2.3"
futures = "0.3.31"
log = "0.4.29"
reqwest = { version = "0.12.26", features = ["charset", "http2", "json", "multipart", "rustls-tls", "stream", "system-proxy"], default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
